--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
-<label for="comments">Name:</label><br>
-<textarea rows="1" cols="50" name=""comments" id="comments">Enter name</textarea><br>
+<label for="Product Name">Product Name:</label><br>
+<textarea rows="1" cols="50" name="Product Name" id="Product Name">Enter name</textarea><br>
+
+<label for="Delivery Type">Delivery Type:</label>
+<select id="Delivery Type" name="Delivery Type">
+  <option value="Normal">Normal</option>
+  <option value="Over Night">Over Night</option>
+  <option value="Same Day">Same Day</option>
+</select>
+
+<label for="Delivery Type">Delivery Type:</label>
+<select id="Delivery Type" name="Delivery Type">
+  <option value="Normal">Normal</option>
+  <option value="Over Night">Over Night</option>
+  <option value="Same Day">Same Day</option>
+</select>
+
+<label for="Name">Name:</label><br>
+<textarea rows="1" cols="50" name="Name" id="Name">Enter name</textarea><br>
+
+<form action=“mailto:e-mail_address” method=“post” enctype=“text/plain”>
