--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <label for="Product Name">Product Name:</label><br>
 <textarea rows="1" cols="50" name="Product Name" id="Product Name">Enter name</textarea><br>
 
-<label for="Delivery Type">Delivery Type:</label>
-<select id="Delivery Type" name="Delivery Type">
-  <option value="Normal">Normal</option>
-  <option value="Over Night">Over Night</option>
-  <option value="Same Day">Same Day</option>
-</select>
+<label for="Quantity">Quantity:</label><br>
+<select id="Quantity" name="Quantity">
+  <option value="1">1</option>
+  <option value="2">2</option>
+  <option value="3">3</option>
+</select><br>
 
 <label for="Delivery Type">Delivery Type:</label>
 <select id="Delivery Type" name="Delivery Type">
   <option value="Normal">Normal</option>
   <option value="Over Night">Over Night</option>
   <option value="Same Day">Same Day</option>
-</select>
+</select><br>
 
 <label for="Name">Name:</label><br>
 <textarea rows="1" cols="50" name="Name" id="Name">Enter name</textarea><br>
